fix overflowing emojiCircle

--- a/app/components/ui/Header/Header.module.scss
+++ b/app/components/ui/Header/Header.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   gap: $spacing-24;
   grid-column: 1 / -1;
-  height: 100%;
+  height: $header-height;
   justify-content: space-between;
   position: relative;
   width: 100%;
@@ -43,8 +43,9 @@
 }
 
 .profilelayout {
-  @include grid-cols(8);
   @extend %layout;
+  @include grid-cols(8);
+  @include padding-y($spacing-48);
 }
 
 .emojiCircle {
@@ -54,7 +55,8 @@
 
   aspect-ratio: 1 / 1;
   background-color: $color-base-white;
-  border-radius: $border-radius-full;
+  border-radius: 50%;
+  max-width: 70%;
   position: relative;
 }
 
